--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Benjamin Blackmon</title>
@@ -16,7 +17,7 @@
           href="css/responsive.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,700" rel="stylesheet" type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,700" rel="stylesheet">
     <!-- fonts -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -46,8 +47,9 @@
     </ul>
   </div>
 </nav>
+
 <div id="home">
-  <div class="body-container">
+  <div class="container">
     <div class="landing-text">
       <img class="header_me" src="images/header_me_crop.jpg">
       <h1>Hello I'm Benjamin</h1>
@@ -59,7 +61,7 @@
 <div id="about">
   <div class="padding">
     <div class="container">
-      <div class="row">
+      <div class="col">
         <div class="text-center">
           <!-- <h3>about</h3> -->
           <p>Self-learner in full-stack LEMP web development via Udacity, and Google.  I enjoy solving problems, and making ideas come to fruition.   Other interests include hockey, space and photography.</p>
@@ -161,12 +163,12 @@
     <footer class="container">
       <div class="row">
         <!-- <div class="container"> -->
-          <div class="row" id="footer">
-            <div class="col-md-5">
+          <div class="col" id="footer">
+            <div class="row-md-5">
               <h3>Contact Me</h3>
               <h4><a href="mailto:bblackmon@gmail.com" id="email">email</a></h4>
             </div>
-            <div class="col-md-5">
+            <div class="row-md-5">
               <h3>Connect with me</h3>
               <a href="#" class="fa fa-linkedin" target="_blank"></a>
               <a href="http://gitlab.com/benjamiam" class="fa fa-gitlab" target="_blank"></a>
